--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "server": "json-server server.json -p 3334",
     "lint": "eslint --fix src --max-warnings=0",
     "postinstall": "husky install",
     "commit": "git-cz"
@@ -26,6 +27,8 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.3.4",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9"
