--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
