--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
